[package]
name = "instruction-dispatcher"
version = "0.1.0"
edition = "2021"

[dependencies]

solana-program="1.18.11"
borsh="1.3.0"
thiserror="1.0.57"
spl-token = "4.0.0"
spl-associated-token-account = "2.3.0"


[lib]
crate-type=["cdylib", "lib"]


[dev-dependencies]
solana-program-test="1.18.11"
solana-sdk="1.18.11"
tokio= "1.0"



